methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:52: error: not found: value color
    setBrushColor(color.Yellow)
                  ^